# air-cursor

./: .gitignore  README.md  pyproject.toml
src/air_cursor/: app.py
src/eye_cursor/: __init__.py  app.py  calibration.py  config.py  macos_mouse.py  mapping.py  tracking.py
src/hand_cursor/: __init__.py  app.py
